<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_temp_logo"
            app:tint="@color/white" />

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_menu"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvRecentActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/recent_activity"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRecentActivity"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tvRecommended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recentRecyclerView"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/recommended"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRecommended"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tvTrending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recommendedRecyclerView"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/trending"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trendingRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTrending"
                android:scrollbars="horizontal" />

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>